--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>
 <body class="stable mw-parser-output">
-<div id="content" class="content mw-body-content"></div>
+<div id="content" class="content mw-body-content" style="margin-top:16px;"></div>
 <div id="bottom_stopper" style="clear:both;height:32px;"></div>
 </body>
 </html>
