--- a/www/index.html
+++ b/www/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html class="$pageLibThemeClass $pageLibDimImgClass">
+<html>
 <head>
     <meta charset="UTF-8"/>
-    <base href="$wikiurl" /> <!-- Set dynamically when loading each page -->
+    <base href="" /> <!-- Set dynamically when loading each page -->
     <script src="/android_asset/bundle.js"></script>
     <link rel="stylesheet" href="https://meta.wikimedia.org/api/rest_v1/data/css/mobile/base">
-    <link rel="stylesheet" href="/api/rest_v1/data/css/mobile/site">
     <link rel="stylesheet" href="https://meta.wikimedia.org/api/rest_v1/data/css/mobile/pagelib"/>
-
+    <link rel="stylesheet" id="localSiteStylesheet">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>
 <body class="stable mw-parser-output">
