conversion logic added

--- a/app/src/main/assets/pcs-html-converter/index.html
+++ b/app/src/main/assets/pcs-html-converter/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <script src="build/Polyfill.js"></script>
-        <script src="build/PCSHTMLConverter.js"></script>
+        <script src="file:///android_asset/pcs-html-converter/build/Polyfill.js"></script>
+        <script src="file:///android_asset/pcs-html-converter/build/PCSHTMLConverter.js"></script>
     </head>
     <body></body>
 </html>
